# EmulatorJS-Netplay

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  app.js  config.json  docker-compose.yml  forge.config.js  functions.js  index.js  package-lock.json  package.json  pnpm-lock.yaml  server.js  tsconfig.json
.github/workflows/: build-and-release.yml  release.yml
WebRTC/: emulator.js  server.js
app/: app.ts
old/: index.js  oldfunctions.js  oldnetplay.js  oldroom.js
server/: auth.ts  index.ts  webrtc.ts
src/: index.html  inject.js  loading.html  main.rs
src-tauri/: tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/public/: index.html
static/: client.js  index.html  style.css
