[package]
name = "emulatorjs-netplay-server"
version = "0.4.3"
edition = "2021"
description = "A Netplay Server For EmulatorJS"
authors = ["EmulatorJS <https://github.com/EmulatorJS>"]

[dependencies]
axum = "0.7.7"
just-webrtc-signalling = "0.2.1"
mime_guess = "2.0.5"
serde = "1.0.210"
serde_json = "1.0.128"
socketioxide = "0.14.1"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
